--- a/_includes/about/timeline.html
+++ b/_includes/about/timeline.html
@@ -1,9 +1,13 @@
 <div class="col mt-4">
+<h2><strong>Experience</strong></h2>
+
   <div class="timeline-body">
     {% for item in site.data.timeline %}
       <div class="timeline-item">
         <div class="content">
-          <h2>{{ item.title }}</h2>
+          <h3>{{ item.title }}</h3>
+          <a href="{{ item.website }}"><h4>{{ item.organisation }}</h4></a>
+          <h5>{{ item.location }}</h5>
           <h6 class="date">{{ item.from }} — {{ item.to }}</h6>
           <p>{{ item.description }}</p>
         </div>
