--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,4 @@
-<div class="container-fluid justify-content-center">
+<div class="container-fluid justify-content-center social-buttons">
 
   {%- assign unfocused_color = "6c757d" -%}
 
