Replaced placeholder blog posts, but not the content

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -58,5 +58,7 @@
 
     {% endfor %}
 
+    <a class="nav-item nav-link " href="https://github.com/GokulVSD/gokulvsd.github.io"><i style="font-size: 0.9em;" class="fab fa-1x fa-github"></i></a>
+
   </div>
 </nav>
