--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 
 <html lang="en" class="h-100">
 
-{% include head.html %}
+{% include head.html page_title=page.title %}
 
 <body class="d-flex flex-column h-100">
 
