--- a/_layouts/printable-default.html
+++ b/_layouts/printable-default.html
@@ -2,7 +2,7 @@
 
 <html lang="en" class="h-100">
 
-{% include head.html %}
+{% include head.html page_title='Gokul Vasudeva (Resume)' resume=true %}
 
 <body class="d-flex flex-column h-100">
 
