--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.description }}">
 
-  <title>{{ site.title }}</title>
+  <title>
+    {% if include.page_title %}
+      {% unless include.resume %}
+        GokulVSD - 
+      {% endunless %}
+      {{ include.page_title }}
+    {% else %}
+      {{ site.title }}
+    {% endif %}
+  </title>
+
+
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
 
   <!-- Font Awesome CDN -->
