--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,3 +56,9 @@
 .navbar-brand.active::after{
     width: 100%;
 }
+
+@media print {
+    .no-print, .no-print * {
+      display: none !important;
+    }
+  }
