--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -13,12 +13,13 @@
         @media print {
 
             @page {
-                margin-top: 5mm;
-                margin-bottom: 5mm;
+                margin-top: 8mm;
+                margin-bottom: 8mm;
             }
 
             .cv {
-                margin-top: -8mm;
+                margin-top: -11mm;
+                margin-bottom: auto;
             }
 
             a,
@@ -53,6 +54,7 @@
             font-size: 1em;
             padding-left: 15mm;
             padding-right: 15mm;
+            margin-bottom: 15mm;
         }
 
         .text-muted {
