--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -57,6 +57,18 @@
             margin-bottom: 15mm;
         }
 
+        @media not print and (max-width: 768px) {
+            .cv {
+            font-size: 0.8em;
+            padding-left: 1mm;
+            padding-right: 1mm;
+            }
+            .cv-date {
+                float: none !important;
+                display: block;
+            }
+        }
+
         .text-muted {
             font-size: 1.5em;
         }
