Fixed layout coexistence on mobile and desktop when not printing

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -57,15 +57,18 @@
             margin-bottom: 15mm;
         }
 
-        @media not print and (max-width: 768px) {
-            .cv {
-            font-size: 0.8em;
-            padding-left: 1mm;
-            padding-right: 1mm;
-            }
-            .cv-date {
-                float: none !important;
-                display: block;
+        @media not print {
+            @media (max-width: 768px) {
+                .cv {
+                    font-size: 0.8em;
+                    padding-left: 1mm;
+                    padding-right: 1mm;
+                }
+
+                .cv-date {
+                    float: none !important;
+                    display: block;
+                }
             }
         }
 
