Fixed spacing issues

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -150,7 +150,7 @@
                 /* Global font size adjustment for the entire resume ON PRINT, everything else is relative to this */
                 font-size: 0.83em;
                 margin-top: -11mm;
-                margin-bottom: 0;
+                margin-bottom: auto;
                 padding-top: 0;
             }
 
