Finished Go, added another post, some modifs

--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -10,7 +10,7 @@
     </div>
 
     <p class="text-muted wow animated slideInUp" data-wow-delay=".15s">
-      I'm <strong>Gokul Vasudeva</strong> I enjoy long walks on the beach, a cup of Earl Grey, and finding elegant solutions to problems.
+      I'm <strong>Gokul Vasudeva</strong>. I enjoy long walks on the beach, a cup of Earl Grey, and finding elegant solutions to problems.
       </p>
 
   </div>
