--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,13 @@
 <head>
 
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="title" content="Gokul Vasudeva (GokulVSD)">
   <meta name="description" content="Information About Gokul Vasudeva, along with his Blog, Projects, Resume and Social links">
   <meta property='og:title' content="GokulVSD's Blog/Website"/>
   <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg'/>
   <meta property='og:description' content="Information About Gokul Vasudeva, along with his Blog, Projects, Resume and Social links"/>
   <meta property='og:url' content='https://gokulvsd.github.io'/>
-
-
-
 
 
   <title>
