PDF Viewer test 2

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -10,7 +10,7 @@
             divId: "adobe-dc-view"
         });
         adobeDCView.previewFile({
-            content: { location: { url: "{{ '/_data/resume.pdf' | absolute_url }}"} },
+            content: { location: { url: "{{ '/assets/Gokul Vasudeva Resume.pdf' | absolute_url }}"} },
             metaData: { fileName: "Gokul Vasudeva Resume.pdf" }
         }, {
             embedMode: "IN_LINE",
