--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -64,7 +64,7 @@
   
   {%- if include.show_page_print -%}
   <div>
-    {% include elements/button.html link="window.print();" text="Download Resume" block=true functional=true %}
+    {% include elements/button.html link="window.print();" text="Download Resume" block=true %}
   </div>
   {%- endif -%}
 
