New resume, and converted resume viewer to a pdf viewer

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -11,7 +11,7 @@
         });
         adobeDCView.previewFile({
             content: { location: { url: "{{ '/assets/resume.pdf' | absolute_url }}"} },
-            metaData: { fileName: "" }
+            metaData: { fileName: "Resume" }
         }, {
             embedMode: "IN_LINE",
             showDownloadPDF: false,
