Attempt at removing unecessary UI

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -21,3 +21,12 @@
     });
 </script>
 
+<style>
+    .HUDView__HUDView___KLcRp .HUDView__HUDViewShow___27ydG, .HUDView__HUDView___KLcRp, .HUDView__HUDViewShow___27ydG {
+        opacity: 0 !important;
+    }
+    .spectrum-Toast{
+        opacity: 0 !important;
+    }
+</style>
+
