As good as it will get

--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,24 +1,4 @@
-<style>
-    .HUDView__HUDView___KLcRp .HUDView__HUDViewShow___27ydG,
-    .HUDView__HUDView___KLcRp,
-    .HUDView__HUDViewShow___27ydG,
-    .HUDView__hudContainer___3mx_O,
-    .HUDView__hudContainer___3mx_O .HUDView__immersiveShow___1pWVE,
-    .HUDView__immersiveShow___1pWVE {
-        opacity: 0 !important;
-        visibility: hidden !important;
-    }
-
-    .spectrum-Toast,
-    .FilenameToast__ToastView___2d5kC .FilenameToast__hideToast___2ZF4u,
-    .FilenameToast__ToastView___2d5kC,
-    .FilenameToast__hideToast___2ZF4u {
-        opacity: 0 !important;
-        visibility: hidden !important;
-    }
-</style>
-
-<div id="adobe-dc-view" style="width: 100%;"></div>
+<div id="adobe-dc-view" style="width: 100%; pointer-events: none;"></div>
 <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
 <script type="text/javascript">
     document.addEventListener("adobe_dc_view_sdk.ready", function () {
