Finished additon of certificate tab, other bug fixes

--- a/_includes/certificates/index.html
+++ b/_includes/certificates/index.html
@@ -1,21 +1,23 @@
-<hr>
+{% assign sorted = site.certificates | sort: 'date' | reverse %}
+
+<br>
 <h2>Technical Certifications</h2>
 <hr>
 
 <div class="card-columns m-3 mt-1">
-  {% for certificate in site.certificates %}
+  {% for certificate in sorted %}
     {%- if certificate.type[0] == "Technical" -%}
     {% include certificates/certificate-card.html %}
     {%- endif -%}
   {% endfor %}
 </div>
 
-<hr>
+<br>
 <h2>Awards & Honors</h2>
 <hr>
 
 <div class="card-columns m-3 mt-1">
-  {% for certificate in site.certificates %}
+  {% for certificate in sorted %}
     {%- if certificate.type[0] == "Award" -%}
     {% include certificates/certificate-card.html %}
     {%- endif -%}
