--- a/_includes/certificates/certificate-card.html
+++ b/_includes/certificates/certificate-card.html
@@ -17,7 +17,7 @@
         {%- endfor -%}
       </p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer no-bg">
       {{ certificate.date | date_to_long_string }}
     </div>
   </a>
