--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,13 +18,11 @@
         display: block;
     }
     .navbar-nav{
-        font-size: 0.9rem;
+        font-size: 0.75rem;
     }
-}
-
-
-.container{
-    width: fit-content;
+    h2{
+        font-size: 1.5rem;
+    }
 }
 
 .navbar-nav{
@@ -71,6 +69,10 @@
 
 .post h1, .post h2{
     margin-top: 0;
+}
+
+.no-bg{
+    background-color: rgba(0,0,0,0)
 }
 
 @media print {
