--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,11 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="Gokul Vasudeva (GokulVSD)">
-  <meta name="description" content="Information About Gokul Vasudeva, along with his Blog, Projects, Resume and Social links">
-  <meta property='og:title' content="GokulVSD's Blog/Website"/>
+  <meta name="title" content="GokulVSD | blog & website | Gokul Vasudeva">
+  <meta name="description" content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links">
+  <meta property='og:title' content="GokulVSD | blog & website | Gokul Vasudeva"/>
   <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg'/>
-  <meta property='og:description' content="Information About Gokul Vasudeva, along with his Blog, Projects, Resume and Social links"/>
+  <meta property='og:description' content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links"/>
   <meta property='og:url' content='https://gokulvsd.github.io'/>
 
 
