--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
     {%- endif -%}
     
   <a class="navbar-brand {{ active_brand }}" href="{{ site.baseurl }}/">
-    <h5><b>{{ site.title }}</b></h5>
+    <h5><b>GokulVSD</b></h5>
   </a>
 
   <div class="navbar-nav">
