Completed RAII series

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,24 +2,12 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="GokulVSD | blog & website | Gokul Vasudeva">
+  <meta name="title" content="GokulVSD - blog & website - Gokul Vasudeva">
   <meta name="description" content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links">
-  <meta property='og:title' content="GokulVSD | blog & website | Gokul Vasudeva"/>
+  <meta property='og:title' content="GokulVSD - blog & website - Gokul Vasudeva"/>
   <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg'/>
   <meta property='og:description' content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links"/>
   <meta property='og:url' content='https://gokulvsd.github.io'/>
-
-
-  <title>
-    {% if include.page_title %}
-      {% unless include.resume %}
-        GokulVSD - 
-      {% endunless %}
-      {{ include.page_title }}
-    {% else %}
-      {{ site.title }}
-    {% endif %}
-  </title>
 
 
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
