--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="title" content="GokulVSD - blog & website - Gokul Vasudeva">
-  <meta name="description" content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links">
-  <meta property='og:title' content="GokulVSD - blog & website - Gokul Vasudeva"/>
-  <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg'/>
-  <meta property='og:description' content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links"/>
-  <meta property='og:url' content='https://gokulvsd.github.io'/>
+  <meta name="description"
+    content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links">
+  <meta property='og:title' content="GokulVSD - blog & website - Gokul Vasudeva" />
+  <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg' />
+  <meta property='og:description'
+    content="Information about Gokul Vasudeva, including his blog, projects, certifications, resume and social links" />
+  <meta property='og:url' content='https://gokulvsd.github.io' />
 
 
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
@@ -19,9 +21,19 @@
   <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
 
   <!-- Animate CSS CDN -->
-  <link rel="stylesheet" href="{{ '/assets/css/animate.css' | relative_url }}" type="text/css"/>
-  
+  <link rel="stylesheet" href="{{ '/assets/css/animate.css' | relative_url }}" type="text/css" />
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SVN96T43VJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SVN96T43VJ');
+  </script>
 
 </head>
