--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,12 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" type="text/css">
 
+  <!-- Dark CSS -->
+  <link rel="stylesheet" href="{{ '/assets/css/dark_mode.css' | relative_url }}" type="text/css" id="darkcss">
+
+  <!-- Icons CSS -->
+  <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-SVN96T43VJ"></script>
   <script>
@@ -35,5 +41,7 @@
 
     gtag('config', 'G-SVN96T43VJ');
   </script>
+
+  <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 
 </head>
