--- a/_includes/projects/project-card.html
+++ b/_includes/projects/project-card.html
@@ -1,7 +1,7 @@
 <div class="wow animated fadeIn" data-wow-delay=".15s">
   <a href="{{ project_url }}" class="project card text-dark">
     {%- if project_img -%}
-    <img id="{{ project_id }}-img" class="card-img-top" src="{{ project_img }}" alt="{{ project_name }}" />
+    <img id="{{ project_id }}-img" class="card-img-top uninvert" src="{{ project_img }}" alt="{{ project_name }}" />
     {%- endif -%}
     <div class="card-body">
       <h5 id="{{ project_id }}-name" class="card-title">
@@ -13,7 +13,7 @@
       <p id="{{ project_id }}-desc" class="card-text">{{ project_desc }}</p>
       <p id="{{ project_id }}-tools" class="card-text">
         {%- for tool in project_tools -%}
-        <span class="badge badge-pill text-primary border border-primary ml-1">{{ tool }}</span>
+        <span class="badge badge-pill text-primary border border-primary ml-1 uninvert">{{ tool }}</span>
         {%- endfor -%}
       </p>
     </div>
