--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,6 +23,9 @@
     h2{
         font-size: 1.5rem;
     }
+    .flex-shrink-0.container.mt-5 {
+      margin-top: 1rem !important;
+    }
 }
 
 .navbar-nav{
@@ -75,8 +78,87 @@
     background-color: rgba(0,0,0,0)
 }
 
+#container {
+    width: 80%;
+}
+
+.post.card.border.border-primary:hover {
+  filter: brightness(90%);
+}
+
 @media print {
     .no-print, .no-print * {
       display: none !important;
     }
+  }
+
+/*Darkmode toggle*/
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+    align-items: center;
+    justify-content: center;
+  
+    em {
+      margin-left: 10px;
+      font-size: 1rem;
+    }
+  }
+  .theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+  }
+  
+  .theme-switch input {
+    display:none;
+  }
+  
+  .slider {
+    background-color: #555;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+  }
+  
+  .slider-toggle {
+    font-family: Linearicons-Free;
+    color: #707070;
+    z-index: 1;
+    background-color: #fff;
+    bottom: 4px;
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+  }
+
+  .slider-toggle::after {
+      content: "\e808";
+  }
+  
+  input:checked + .slider-toggle + .slider {
+    background-color: #66bb6a;
+  }
+  
+  input:checked + .slider-toggle {
+    transform: translateX(26px);
+  }
+
+  input:checked + .slider-toggle::after {
+    content: "\e807";
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider-toggle {
+    border-radius: 50%;
   }
