Updated resume and relevant about me info

--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -11,8 +11,7 @@
     </div>
 
     <p class="text-muted wow animated slideInUp" data-wow-delay=".15s"  style="visibility:hidden">
-      I'm <strong>Gokul Vasudeva</strong>. They call me an enabler and a healer. I enjoy long walks on the beach, a cup of Earl Grey or Morrocon Mint, and finding elegant
-      solutions to problems.
+      I'm <strong>Gokul Vasudeva</strong>. I enjoy long walks on the beach, a nice cup of tea, and finding elegant solutions to problems.
     </p>
 
     <div class="theme-switch-wrapper wow animated zoomIn" data-wow-delay="0.4s" style="visibility:hidden">
