--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,5 +1,5 @@
 <div id="adobe-dc-view" style="width: 100%; pointer-events: none;" ></div>
-<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+<script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
 <script type="text/javascript">
     document.addEventListener("adobe_dc_view_sdk.ready", function () {
         var adobeDCView = new AdobeDC.View({
@@ -8,7 +8,7 @@
         });
         adobeDCView.previewFile({
             content: { location: { url: "{{ '/assets/resume.pdf' | absolute_url }}" } },
-            metaData: { fileName: "Loaded" }
+            metaData: { fileName: "✓ Loaded" }
         }, {
             embedMode: "IN_LINE",
             showDownloadPDF: false,
