Updated website to adhere to latest info

--- a/_includes/certificates/index.html
+++ b/_includes/certificates/index.html
@@ -1,4 +1,4 @@
-{% assign sorted = site.certificates | sort: 'date' | reverse %}
+{% assign sorted = site.certificates | sort: 'title' %}
 
 <br>
 <h2>Awards & Honors</h2>
