Add sitemap, attempt apple touch icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,17 +2,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="GokulVSD - blog & website - Gokul Vasudeva">
-  <meta name="description"
-    content="All about Gokul Vasudeva, including his blog, projects, achievements, resume and social links">
-  <meta property='og:title' content="GokulVSD - blog & website - Gokul Vasudeva" />
-  <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg' />
-  <meta property='og:description'
-    content="All about Gokul Vasudeva, including his blog, projects, achievements, resume and social links" />
-  <meta property='og:url' content='https://gokulvsd.github.io' />
 
+  <link rel="icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
 
-  <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
+  <link rel="apple-touch-icon" href="{{ '/assets/face.jpg' | relative_url }}">
 
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="{{ '/assets/css/fontawesome/css/all.css' | relative_url }}">
