Update certificates to awards, include patent in resume

--- a/_layouts/award.html
+++ b/_layouts/award.html
@@ -1,5 +1,5 @@
 ---
-layout: certpage
+layout: awardpage
 ---
 
 <img src="{{ page.image }}" alt="Could not load" />
@@ -9,7 +9,7 @@ layout: certpage
 <h2><b>{{ page.title }}</b></h2>
 
 <p class="post-metadata text-muted">
-  Completed on: {{ page.date | date_to_long_string }} 
+  Completed on: {{ page.date | date_to_long_string }}
 
   <br>
 
