--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property='og:image' content='https://gokulvsd.github.io/assets/website_shareable.jpg' />
 
   <link rel="icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
 
